Debug following and get posts
