# docs/swagger.json
@@ -173,7 +173,7 @@
                 }
             }
         },
-        "/api/follows/{userID}": {
+        "/api/follows/{userID}/followers": {
             "get": {
                 "description": "Retrieves the list of followers for the user with the specified userID",
                 "produces": [
@@ -1330,6 +1330,9 @@
                 },
                 "birthDate": {
                     "type": "string"
+                },
+                "followedByCurrentUser": {
+                    "type": "boolean"
                 },
                 "id": {
                     "type": "integer"
